--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       body {
         height: 100vh;
-        box-shadow: inset 0 0 20px rgba(255, 0, 0, 0.5);
+        box-shadow: inset 0 0 0vw rgba(255, 0, 0, 0);
       }
 
       </style>
