--- a/index.html
+++ b/index.html
@@ -2,57 +2,74 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Document</title>
-    <style>
-      @font-face {
-        font-family: 'Kristen ITC';
-        src: url(./ITCKRIST.TTF);
-      }
-      * {
-        font-family: 'Kristen ITC';
-      }
-      body {
-        height: 100vh;
-        box-shadow: inset 0 0 0vw rgba(255, 0, 0, 0);
-      }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <title>Document</title>
+  <style>
+    @font-face {
+      font-family: 'Kristen ITC';
+      src: url(./ITCKRIST.TTF);
+    }
 
-      </style>
+    * {
+      font-family: 'Kristen ITC';
+    }
+
+    body {
+      height: 100vh;
+      box-shadow: inset 200px rgba(255, 0, 0, 0);
+    }
+  </style>
 </head>
 
 <body>
-    <div class="container text-center">
-        <div class="row d-flex justify-content-center align-items-end">
-          <div class="col-12 mt-3 text-center mb-3">
-            <img id="imgState" class="img-fluid rounded m-1" src="./img/Vida7.png" style="width: 575px; height: 385px;" alt="VidaImg">
-            <h1 id="palabra">
-            </h1>
-          </div>
-          <div class="space col-4"></div>
-          <div class="col-1">
-            <h3>Adivinar letra</h3>
-            <input id="input-letra" type="text" maxlength="1" class="form-control bg bg-dark text-light"
-            style="text-align: center;"/>
-          </div>
-          <div class="col-4">
-            <h3>Adivinar<br>palabra</h3>
-            <input id="input-palabra" type="text" maxlength="8" class="form-control bg bg-dark text-light"
-            style="text-align: center;"/>
-          </div>
-          <div class="space col-3"></div>
-
-          <div id="retry" class="mt-3">
-            <a href="./index.html" class="btn btn-dark text-light">REINTENTAR</a>
-          </div>
+  <div class="container text-center">
+    <div class="row d-flex justify-content-center align-items-end">
+      
+      <div class="col-10 mt-3 mb-3">
+        <img id="imgState" class="img-fluid rounded m-1" src="./img/Vida7.png" style="width: 575px; height: 385px;"
+          alt="VidaImg">
+        <h1 id="palabra">
+        </h1>
+      </div>
+      
+      <div class="col-4 d-flex text-center">
+        <div class="p-3 d-flex align-items-center justify-content-center"
+        style="min-height: 220px; max-width: 175px; border: solid 0.25vh; border-right: dashed;">
+          <p class="h4">
+            Letras no coincidentes
+          </p>
+        </div>
+        <div class="p-3"
+        style="min-width: 100px; border: solid 0.25vh; border-left: none;">
+          <p id="letras-usadas">
+          </p>
         </div>
       </div>
-    <script src="index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-        </script>
+
+      <div class="col-1 pb-4">
+        <h3>Letra</h3>
+        <input id="input-letra" type="text" maxlength="1" class="form-control bg bg-dark text-light"
+          style="text-align: center;" />
+      </div>
+      <div class="col-4 pb-4">
+        <h3>Adivinar palabra</h3>
+        <input id="input-palabra" type="text" maxlength="8" class="form-control bg bg-dark text-light"
+          style="text-align: center;" />
+      </div>
+      <div class="space col-3"></div>
+
+      <div id="retry" class="mt-3">
+        <a href="./index.html" class="btn btn-dark text-light">REINTENTAR</a>
+      </div>
+    </div>
+  </div>
+  <script src="index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
