--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </h1>
       </div>
       
-      <div class="col-4 d-flex text-center">
+      <div class="no-coincidentes col-4 d-flex text-center">
         <div class="p-3 d-flex align-items-center justify-content-center"
         style="min-height: 220px; max-width: 175px; border: solid 0.25vh; border-right: dashed;">
           <p class="h4">
             Letras no coincidentes
           </p>
         </div>
-        <div class="p-3"
+        <div
         style="min-width: 100px; border: solid 0.25vh; border-left: none;">
           <p id="letras-usadas">
           </p>
